@@ -19,33 +19,31 @@
 
 package org.eclipse.tractusx.traceability.integration.notification.alert;
 
+import common.FilterAttribute;
+import common.FilterValue;
 import io.restassured.http.ContentType;
-import org.eclipse.tractusx.traceability.common.request.OwnPageable;
-import org.eclipse.tractusx.traceability.common.request.PageableFilterRequest;
-import org.eclipse.tractusx.traceability.common.request.SearchCriteriaRequestParam;
+import notification.request.NotificationFilter;
+import notification.request.NotificationRequest;
+import org.eclipse.tractusx.traceability.common.model.SearchCriteriaOperator;
+import org.eclipse.tractusx.traceability.common.model.SearchCriteriaStrategy;
 import org.eclipse.tractusx.traceability.integration.IntegrationTestSpecification;
 import org.eclipse.tractusx.traceability.integration.common.support.AlertNotificationsSupport;
 import org.eclipse.tractusx.traceability.integration.common.support.BpnSupport;
 import org.eclipse.tractusx.traceability.notification.infrastructure.notification.model.NotificationMessageEntity;
+import org.eclipse.tractusx.traceability.notification.infrastructure.notification.model.NotificationSideBaseEntity;
 import org.eclipse.tractusx.traceability.testdata.AlertTestDataFactory;
 import org.hamcrest.Matchers;
 import org.jose4j.lang.JoseException;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.params.ParameterizedTest;
-import org.junit.jupiter.params.provider.Arguments;
-import org.junit.jupiter.params.provider.MethodSource;
 import org.springframework.beans.factory.annotation.Autowired;
 
 import java.text.SimpleDateFormat;
 import java.time.Instant;
-import java.util.Arrays;
 import java.util.Date;
 import java.util.List;
-import java.util.stream.Stream;
 
 import static io.restassured.RestAssured.given;
 import static org.eclipse.tractusx.traceability.common.security.JwtRole.ADMIN;
-import static org.hamcrest.Matchers.equalTo;
 
 class ReadReceivedAlertsWithSearchCriteriaControllerIT extends IntegrationTestSpecification {
 
@@ -58,17 +56,25 @@ class ReadReceivedAlertsWithSearchCriteriaControllerIT extends IntegrationTestSp
     @Test
     void givenFilterBySendToProvided_whenGetAlerts_thenReturnReceivedAlertsFilteredBySendTo() throws JoseException {
         // Given
-        String filterString = "channel,EQUAL,RECEIVER,AND";
-        String filter = "sendTo,EQUAL,BPNL000000000001,AND";
         String testBpn = bpnSupport.testBpn();
-
         NotificationMessageEntity[] alertNotificationEntities = AlertTestDataFactory.createReceiverMajorityAlertNotificationEntitiesTestData(testBpn);
         alertNotificationsSupport.storedAlertNotifications(alertNotificationEntities);
+
+        NotificationFilter filter = NotificationFilter.builder()
+                .channel(FilterAttribute.builder()
+                        .value(List.of(FilterValue.builder().value(NotificationSideBaseEntity.RECEIVER.name()).strategy(SearchCriteriaStrategy.EQUAL.name()).build()))
+                        .operator(SearchCriteriaOperator.OR.name())
+                        .build())
+                .sendTo(FilterAttribute.builder()
+                        .value(List.of(FilterValue.builder().value("BPNL000000000001").strategy(SearchCriteriaStrategy.EQUAL.name()).build()))
+                        .operator(SearchCriteriaOperator.OR.name())
+                        .build())
+                .build();
 
         // Then
         given()
                 .header(oAuth2Support.jwtAuthorization(ADMIN))
-                .body(new PageableFilterRequest(new OwnPageable(0, 10, List.of()), new SearchCriteriaRequestParam(List.of(filterString, filter))))
+                .body(NotificationRequest.builder().page(0).size(10).notificationFilter(filter).build())
                 .contentType(ContentType.JSON)
                 .when()
                 .post("/api/notifications/filter")
@@ -79,26 +85,35 @@ class ReadReceivedAlertsWithSearchCriteriaControllerIT extends IntegrationTestSp
                 .body("pageSize", Matchers.is(10))
                 .body("content", Matchers.hasSize(2))
                 .body("totalItems", Matchers.is(2))
-                .body("content.messages.sendTo", Matchers.hasItems(Arrays.asList("BPNL000000000001")));
+                .body("content.messages.sendTo", Matchers.hasItems(List.of("BPNL000000000001")));
     }
 
     @Test
     void givenFilterByCreatedDateProvided_whenGetAlerts_thenReturnReceivedAlertsFilteredByCreatedDate() throws JoseException {
         // Given
-        String filterString = "channel,EQUAL,RECEIVER,AND";
         Date myDate = Date.from(Instant.now());
         SimpleDateFormat formatter = new SimpleDateFormat("yyyy-MM-dd");
         String formattedDate = formatter.format(myDate);
-        String filter = "createdDate,AT_LOCAL_DATE," + formattedDate + ",AND";
         String testBpn = bpnSupport.testBpn();
 
         NotificationMessageEntity[] alertNotificationEntities = AlertTestDataFactory.createReceiverMajorityAlertNotificationEntitiesTestData(testBpn);
         alertNotificationsSupport.storedAlertNotifications(alertNotificationEntities);
 
+        NotificationFilter filter = NotificationFilter.builder()
+                .channel(FilterAttribute.builder()
+                        .value(List.of(FilterValue.builder().value(NotificationSideBaseEntity.RECEIVER.name()).strategy(SearchCriteriaStrategy.EQUAL.name()).build()))
+                        .operator(SearchCriteriaOperator.OR.name())
+                        .build())
+                .createdDate(FilterAttribute.builder()
+                        .value(List.of(FilterValue.builder().value(formattedDate).strategy(SearchCriteriaStrategy.AT_LOCAL_DATE.name()).build()))
+                        .operator(SearchCriteriaOperator.AND.name())
+                        .build())
+                .build();
+
         // Then
         given()
                 .header(oAuth2Support.jwtAuthorization(ADMIN))
-                .body(new PageableFilterRequest(new OwnPageable(0, 10, List.of()), new SearchCriteriaRequestParam(List.of(filterString, filter))))
+                .body(NotificationRequest.builder().page(0).size(10).notificationFilter(filter).build())
                 .contentType(ContentType.JSON)
                 .when()
                 .post("/api/notifications/filter")
@@ -114,17 +129,25 @@ class ReadReceivedAlertsWithSearchCriteriaControllerIT extends IntegrationTestSp
     @Test
     void givenFilterBySendToNameProvided_whenGetAlerts_thenReturnReceivedAlertsFilteredBySendToName() throws JoseException {
         // Given
-        String filterString = "channel,EQUAL,RECEIVER,AND";
-        String filter = "sendToName,EQUAL,OEM2,AND";
         String testBpn = bpnSupport.testBpn();
-
         NotificationMessageEntity[] alertNotificationEntities = AlertTestDataFactory.createReceiverMajorityAlertNotificationEntitiesTestData(testBpn);
         alertNotificationsSupport.storedAlertNotifications(alertNotificationEntities);
+
+        NotificationFilter filter = NotificationFilter.builder()
+                .channel(FilterAttribute.builder()
+                        .value(List.of(FilterValue.builder().value(NotificationSideBaseEntity.RECEIVER.name()).strategy(SearchCriteriaStrategy.EQUAL.name()).build()))
+                        .operator(SearchCriteriaOperator.OR.name())
+                        .build())
+                .sendToName(FilterAttribute.builder()
+                        .value(List.of(FilterValue.builder().value("OEM2").strategy(SearchCriteriaStrategy.EQUAL.name()).build()))
+                        .operator(SearchCriteriaOperator.OR.name())
+                        .build())
+                .build();
 
         // Then
         given()
                 .header(oAuth2Support.jwtAuthorization(ADMIN))
-                .body(new PageableFilterRequest(new OwnPageable(0, 10, List.of()), new SearchCriteriaRequestParam(List.of(filterString, filter))))
+                .body(NotificationRequest.builder().page(0).size(10).notificationFilter(filter).build())
                 .contentType(ContentType.JSON)
                 .when()
                 .post("/api/notifications/filter")
@@ -141,17 +164,25 @@ class ReadReceivedAlertsWithSearchCriteriaControllerIT extends IntegrationTestSp
     @Test
     void givenFilterByStatusProvided_whenGetAlerts_thenReturnReceivedAlertsFilteredByStatus() throws JoseException {
         // Given
-        String filterString = "channel,EQUAL,RECEIVER,AND";
-        String filter = "status,EQUAL,ACCEPTED,AND";
         String testBpn = bpnSupport.testBpn();
-
         NotificationMessageEntity[] alertNotificationEntities = AlertTestDataFactory.createReceiverMajorityAlertNotificationEntitiesTestData(testBpn);
         alertNotificationsSupport.storedAlertNotifications(alertNotificationEntities);
+
+        NotificationFilter filter = NotificationFilter.builder()
+                .channel(FilterAttribute.builder()
+                        .value(List.of(FilterValue.builder().value(NotificationSideBaseEntity.RECEIVER.name()).strategy(SearchCriteriaStrategy.EQUAL.name()).build()))
+                        .operator(SearchCriteriaOperator.OR.name())
+                        .build())
+                .status(FilterAttribute.builder()
+                        .value(List.of(FilterValue.builder().value("ACCEPTED").strategy(SearchCriteriaStrategy.EQUAL.name()).build()))
+                        .operator(SearchCriteriaOperator.OR.name())
+                        .build())
+                .build();
 
         // Then
         given()
                 .header(oAuth2Support.jwtAuthorization(ADMIN))
-                .body(new PageableFilterRequest(new OwnPageable(0, 10, List.of()), new SearchCriteriaRequestParam(List.of(filterString, filter))))
+                .body(NotificationRequest.builder().page(0).size(10).notificationFilter(filter).build())
                 .contentType(ContentType.JSON)
                 .when()
                 .post("/api/notifications/filter")
@@ -168,19 +199,27 @@ class ReadReceivedAlertsWithSearchCriteriaControllerIT extends IntegrationTestSp
     @Test
     void givenFilterBySeverityProvided_whenGetAlerts_thenReturnReceivedAlertsFilteredBySeverity() throws JoseException {
         // Given
-        String filterString = "channel,EQUAL,RECEIVER,AND";
-        String filter = "severity,EQUAL,LIFE_THREATENING,AND";
         String sort = "createdDate,desc";
-
         String testBpn = bpnSupport.testBpn();
 
         NotificationMessageEntity[] alertNotificationEntities = AlertTestDataFactory.createReceiverMajorityAlertNotificationEntitiesTestData(testBpn);
         alertNotificationsSupport.storedAlertNotifications(alertNotificationEntities);
 
+        NotificationFilter filter = NotificationFilter.builder()
+                .channel(FilterAttribute.builder()
+                        .value(List.of(FilterValue.builder().value(NotificationSideBaseEntity.RECEIVER.name()).strategy(SearchCriteriaStrategy.EQUAL.name()).build()))
+                        .operator(SearchCriteriaOperator.OR.name())
+                        .build())
+                .severity(FilterAttribute.builder()
+                        .value(List.of(FilterValue.builder().value("LIFE_THREATENING").strategy(SearchCriteriaStrategy.EQUAL.name()).build()))
+                        .operator(SearchCriteriaOperator.OR.name())
+                        .build())
+                .build();
+
         // Then
         given()
                 .header(oAuth2Support.jwtAuthorization(ADMIN))
-                .body(new PageableFilterRequest(new OwnPageable(0, 10, List.of(sort)), new SearchCriteriaRequestParam(List.of(filterString, filter))))
+                .body(NotificationRequest.builder().page(0).size(10).sort(List.of(sort)).notificationFilter(filter).build())
                 .contentType(ContentType.JSON)
                 .when()
                 .post("/api/notifications/filter")
@@ -197,17 +236,25 @@ class ReadReceivedAlertsWithSearchCriteriaControllerIT extends IntegrationTestSp
     @Test
     void givenFilterByCreatedByProvided_whenGetAlerts_thenReturnReceivedAlertsFilteredByCreatedBy() throws JoseException {
         // Given
-        String filterString = "channel,EQUAL,RECEIVER,AND";
-        String filter = "createdBy,EQUAL,BPNL00000000000A,AND";
         String testBpn = bpnSupport.testBpn();
-
         NotificationMessageEntity[] alertNotificationEntities = AlertTestDataFactory.createReceiverMajorityAlertNotificationEntitiesTestData(testBpn);
         alertNotificationsSupport.storedAlertNotifications(alertNotificationEntities);
+
+        NotificationFilter filter = NotificationFilter.builder()
+                .channel(FilterAttribute.builder()
+                        .value(List.of(FilterValue.builder().value(NotificationSideBaseEntity.RECEIVER.name()).strategy(SearchCriteriaStrategy.EQUAL.name()).build()))
+                        .operator(SearchCriteriaOperator.OR.name())
+                        .build())
+                .createdBy(FilterAttribute.builder()
+                        .value(List.of(FilterValue.builder().value("BPNL00000000000A").strategy(SearchCriteriaStrategy.EQUAL.name()).build()))
+                        .operator(SearchCriteriaOperator.OR.name())
+                        .build())
+                .build();
 
         // Then
         given()
                 .header(oAuth2Support.jwtAuthorization(ADMIN))
-                .body(new PageableFilterRequest(new OwnPageable(0, 10, List.of()), new SearchCriteriaRequestParam(List.of(filterString, filter))))
+                .body(NotificationRequest.builder().page(0).size(10).notificationFilter(filter).build())
                 .contentType(ContentType.JSON)
                 .when()
                 .post("/api/notifications/filter")
@@ -224,17 +271,25 @@ class ReadReceivedAlertsWithSearchCriteriaControllerIT extends IntegrationTestSp
     @Test
     void givenFilterByDescriptionProvided_whenGetAlerts_thenReturnReceivedAlertsFilteredByDescription() throws JoseException {
         // Given
-        String filterString = "channel,EQUAL,RECEIVER,AND";
-        String filter = "description,STARTS_WITH,First,AND";
         String testBpn = bpnSupport.testBpn();
-
         NotificationMessageEntity[] alertNotificationEntities = AlertTestDataFactory.createReceiverMajorityAlertNotificationEntitiesTestData(testBpn);
         alertNotificationsSupport.storedAlertNotifications(alertNotificationEntities);
+
+        NotificationFilter filter = NotificationFilter.builder()
+                .channel(FilterAttribute.builder()
+                        .value(List.of(FilterValue.builder().value(NotificationSideBaseEntity.RECEIVER.name()).strategy(SearchCriteriaStrategy.EQUAL.name()).build()))
+                        .operator(SearchCriteriaOperator.OR.name())
+                        .build())
+                .description(FilterAttribute.builder()
+                        .value(List.of(FilterValue.builder().value("First").strategy(SearchCriteriaStrategy.STARTS_WITH.name()).build()))
+                        .operator(SearchCriteriaOperator.OR.name())
+                        .build())
+                .build();
 
         // Then
         given()
                 .header(oAuth2Support.jwtAuthorization(ADMIN))
-                .body(new PageableFilterRequest(new OwnPageable(0, 10, List.of()), new SearchCriteriaRequestParam(List.of(filterString, filter))))
+                .body(NotificationRequest.builder().page(0).size(10).notificationFilter(filter).build())
                 .contentType(ContentType.JSON)
                 .when()
                 .post("/api/notifications/filter")
@@ -251,18 +306,29 @@ class ReadReceivedAlertsWithSearchCriteriaControllerIT extends IntegrationTestSp
     @Test
     void givenFilterByDescriptionAndSendToProvided_whenGetAlerts_thenReturnReceivedAlertsFilteredByDescriptionAndSendTo() throws JoseException {
         // Given
-        String filterString = "channel,EQUAL,RECEIVER,AND";
-        String filterString1 = "description,STARTS_WITH,First,AND";
-        String filterString2 = "sendTo,EQUAL,BPNL000000000001,AND";
         String testBpn = bpnSupport.testBpn();
-
         NotificationMessageEntity[] alertNotificationEntities = AlertTestDataFactory.createReceiverMajorityAlertNotificationEntitiesTestData(testBpn);
         alertNotificationsSupport.storedAlertNotifications(alertNotificationEntities);
+
+        NotificationFilter filter = NotificationFilter.builder()
+                .channel(FilterAttribute.builder()
+                        .value(List.of(FilterValue.builder().value(NotificationSideBaseEntity.RECEIVER.name()).strategy(SearchCriteriaStrategy.EQUAL.name()).build()))
+                        .operator(SearchCriteriaOperator.OR.name())
+                        .build())
+                .description(FilterAttribute.builder()
+                        .value(List.of(FilterValue.builder().value("First").strategy(SearchCriteriaStrategy.STARTS_WITH.name()).build()))
+                        .operator(SearchCriteriaOperator.OR.name())
+                        .build())
+                .sendTo(FilterAttribute.builder()
+                        .value(List.of(FilterValue.builder().value("BPNL000000000001").strategy(SearchCriteriaStrategy.EQUAL.name()).build()))
+                        .operator(SearchCriteriaOperator.OR.name())
+                        .build())
+                .build();
 
         // Then
         given()
                 .header(oAuth2Support.jwtAuthorization(ADMIN))
-                .body(new PageableFilterRequest(new OwnPageable(0, 10, List.of()), new SearchCriteriaRequestParam(List.of(filterString, filterString1, filterString2))))
+                .body(NotificationRequest.builder().page(0).size(10).notificationFilter(filter).build())
                 .contentType(ContentType.JSON)
                 .when()
                 .post("/api/notifications/filter")
@@ -273,25 +339,35 @@ class ReadReceivedAlertsWithSearchCriteriaControllerIT extends IntegrationTestSp
                 .body("pageSize", Matchers.is(10))
                 .body("content", Matchers.hasSize(1))
                 .body("totalItems", Matchers.is(1))
-                .body("content.messages.sendTo", Matchers.hasItems(Arrays.asList("BPNL000000000001")))
+                .body("content.messages.sendTo", Matchers.hasItems(List.of("BPNL000000000001")))
                 .body("content.description", Matchers.hasItems("First Alert on Asset1"));
     }
 
     @Test
-    void givenFilterBySendToNameOrSendToProvided_whenGetAlerts_thenReturnReceivedAlertsFilteredBySendToNameOrSendTo() throws JoseException {
+    void givenFilterBySendToNameOrSendToName_whenGetAlerts_thenReturnReceivedAlertsFilteredBySendToNames() throws JoseException {
         // Given
-        String filterString = "channel,EQUAL,RECEIVER,AND";
-        String filterString1 = "sendToName,EQUAL,OEM2,OR";
-        String filterString2 = "sendTo,EQUAL,BPNL000000000001,OR";
         String testBpn = bpnSupport.testBpn();
-
         NotificationMessageEntity[] alertNotificationEntities = AlertTestDataFactory.createReceiverMajorityAlertNotificationEntitiesTestData(testBpn);
         alertNotificationsSupport.storedAlertNotifications(alertNotificationEntities);
+
+        NotificationFilter filter = NotificationFilter.builder()
+                .channel(FilterAttribute.builder()
+                        .value(List.of(FilterValue.builder().value(NotificationSideBaseEntity.RECEIVER.name()).strategy(SearchCriteriaStrategy.EQUAL.name()).build()))
+                        .operator(SearchCriteriaOperator.OR.name())
+                        .build())
+                .sendToName(FilterAttribute.builder()
+                        .value(List.of(
+                                FilterValue.builder().value("OEM2").strategy(SearchCriteriaStrategy.EQUAL.name()).build(),
+                                FilterValue.builder().value("OEM1").strategy(SearchCriteriaStrategy.EQUAL.name()).build()
+                        ))
+                        .operator(SearchCriteriaOperator.OR.name())
+                        .build())
+                .build();
 
         // Then
         given()
                 .header(oAuth2Support.jwtAuthorization(ADMIN))
-                .body(new PageableFilterRequest(new OwnPageable(0, 10, List.of()), new SearchCriteriaRequestParam(List.of(filterString, filterString1, filterString2))))
+                .body(NotificationRequest.builder().page(0).size(10).notificationFilter(filter).build())
                 .contentType(ContentType.JSON)
                 .when()
                 .post("/api/notifications/filter")
@@ -302,7 +378,7 @@ class ReadReceivedAlertsWithSearchCriteriaControllerIT extends IntegrationTestSp
                 .body("pageSize", Matchers.is(10))
                 .body("content", Matchers.hasSize(3))
                 .body("totalItems", Matchers.is(3))
-                .body("content.messages.sendTo", Matchers.hasItems(Arrays.asList("BPNL000000000001")))
+                .body("content.messages.sendTo", Matchers.hasItems(List.of("BPNL000000000001")))
                 .body("content.sendToName", Matchers.hasItems("OEM2"));
     }
 }
